# monalisa-gsoap-client

./: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
src/: MLWebServiceSoapBinding.getConfiguration.req.xml  MLWebServiceSoapBinding.getConfiguration.res.xml  MLWebServiceSoapBinding.getFilteredLastValues.req.xml  MLWebServiceSoapBinding.getFilteredLastValues.res.xml  MLWebServiceSoapBinding.getLastValues.req.xml  MLWebServiceSoapBinding.getLastValues.res.xml  MLWebServiceSoapBinding.getLatestConfiguration.req.xml  MLWebServiceSoapBinding.getLatestConfiguration.res.xml  MLWebServiceSoapBinding.getValues.req.xml  MLWebServiceSoapBinding.getValues.res.xml  MLWebServiceSoapBinding.networkMeasurementSet.req.xml  MLWebServiceSoapBinding.networkMeasurementSet.res.xml  MLWebServiceSoapBinding.nsmap  Makefile.am  Makefile.in  monalisawsclient.cxx  monalisawsclient.h  soapC.cpp  soapClient.cpp  soapH.h  soapMLWebService.h  soapMLWebServiceSoapBindingProxy.h  soapStub.h  stdsoap2.h  testWS.cxx
